[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
futures-util = "0.3.32"
lazy_static = "1.5.0"
once_cell = "1.21.3"
poise = "0.6.1"
rand = "0.10.0"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serenity = "0.12.5"
tokio = { version = "1.50.0", features = ["full"] }
base64 = "0.22.1"
